# csn_bench

./: .gitignore  README.md  compose.yml  pyproject.toml  run_experiments.bat  run_experiments.sh
docker/ecsbm/: Dockerfile  environment.yml  run.sh
docker/reccs/: Dockerfile  environment.yml  run.sh
results/final/analysis/: basic_metrics.csv  fidelity_metrics.csv  quality_index.csv  robustness_metrics.csv  validation_consistency.csv  validation_utility_metrics.csv
scripts/: run_ecsbm.bat  run_ecsbm.sh  run_reccs.bat  run_reccs.sh  run_vae.bat  run_vae.sh
src/VAE/: decoder.py  encoder.py  graphstats.py  main.py  train.py
src/analysis/: basic_metrics.py  fidelity_metrics.py  generate_plots.py  quality_index.py  robustness_analysis.py  validation_utility.py
src/data/: load_data.py  standardize_outputs.py
src/utils/: log.py
