[project]
name = "csn-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "igraph>=1.0.0",
    "infomap>=2.8.0",
    "matplotlib>=3.10.8",
    "netlsd>=1.0.2",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-louvain>=0.16",
    "requests>=2.32.5",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]
